...
        android:src="@drawable/klasse"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
         />

    <Button
        android:id="@+id/student"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="#03705F"
...
        android:padding="20dp"
        android:text="    Student   "
        android:textAlignment="center"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/instruct"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#03705F"
        android:elevation="20dp"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:text="Instructor"
        android:textAlignment="center"
        android:textColor="#ffffff" />

</LinearLayout>

