...
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="90dp"
    android:background="@drawable/loginbg"
    tools:context="com.example.asus.klasseandroid.general.Login">

<EditText
    android:id="@+id/userId"
    android:textColor="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="User ID"
    android:imeActionId="6"
    android:imeActionLabel="@string/action_sign_in_short"
...
