...
    <string name="add_next">Add</string>
    <string name="mark">Marks for the question: </string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="submit">Submit</string>
    <string name="ip1">192.168.1.185</string>
    <string name="ip">10.12.195.1</string>

    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
...
